# sotarag

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: tests.yml
src/: config.py  tasks.py
src/api/: main.py
src/crawler/: arxiv_client.py
src/engine/: chat.py  embedding.py  ingest.py  processor.py  vector_db.py
src/ui/: app.py
tests/: test_api.py  test_chat.py  test_embedding.py  test_ingest.py  test_processor.py  test_vector_db.py
